mailhog/deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  labels:
    app: mailhog
  name: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      priorityClassName: custom-priority
      volumes:
        - name: mailhog-maildir
          persistentVolumeClaim: { claimName: pvc-mailhog }
      containers:
        - image: mailhog/mailhog
          name: mailhog
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /maildir
              name: mailhog-maildir
          command:
            - "MailHog"
            - "-storage=maildir"
            - "-maildir-path=/maildir"
          readinessProbe:
            tcpSocket:
              port: 8025
          livenessProbe:
            tcpSocket:
              port: 8025
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
