mailhog/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mailhog
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "mailhog.172.17.0.2.nip.io"
      http:
        paths:
          - path: /
            backend:
              serviceName: mailhog
              servicePort: 8025
